--- a/projects/hostile-design-concept/style/hostyle.css
+++ b/projects/hostile-design-concept/style/hostyle.css
@@ -1,8 +1,8 @@
-/* .center {
+.center {
   margin: auto;
   width: 50%;
   padding: 10px;
-} */
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -28,7 +28,7 @@ body {
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 16px;
   border: none;
   outline: none;
   color: white;
@@ -38,7 +38,8 @@ body {
   margin: 0;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
+.navbar a:hover,
+.dropdown:hover .dropbtn {
   background-color: red;
 }
 
@@ -47,7 +48,7 @@ body {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
