--- a/projects/hostile-design-concept/style/hostyle.css
+++ b/projects/hostile-design-concept/style/hostyle.css
@@ -8,6 +8,11 @@
     margin-left: 10px;
 }
 
+.slider-label {
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
