--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-/* .center {
+.center {
   margin: auto;
   width: 50%;
   padding: 10px;
-} */
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
