Cleaned up Hostile User Design page, added margins so preview text isn't cluttered

--- a/projects/hostile-design-concept/style/hostyle.css
+++ b/projects/hostile-design-concept/style/hostyle.css
@@ -8,6 +8,10 @@
     margin-left: 10px;
 }
 
+#slider-div {
+    margin-top: 15px;
+}
+
 .slider-label {
     margin-left: 5px;
     margin-right: 10px;
