--- a/projects/hostile-design-concept/aggravating-captcha/captcha.css
+++ b/projects/hostile-design-concept/aggravating-captcha/captcha.css
@@ -8,7 +8,7 @@
 }
 
 .captcha-text-box {
-  border: thick, black;
+  border: thick black;
   background-color: white;
   width: 50;
   margin: auto;
