--- a/projects/hostile-design-concept/style/hostyle.css
+++ b/projects/hostile-design-concept/style/hostyle.css
@@ -4,7 +4,14 @@
   text-align: center;
 }
 
-#fn-submit {
+#last-name-canvas {
+  border: 5px solid black;
+  margin-top: 10px;
+  /* width: 100%; */
+  /* height: 400px; */
+}
+
+#fn-num-submit {
   margin-left: 10px;
 }
 
