--- a/projects/hostile-ux/combative-captcha/style/captcha.css
+++ b/projects/hostile-ux/combative-captcha/style/captcha.css
@@ -5,16 +5,18 @@
 .captcha-container {
   border-radius: 5%;
   background-color: lightgrey;
+  border-style: solid;
+  border-width: .5px;
   border-color: #808080;
   width: 50%;
-  margin: auto;
+  margin: 50px auto;
   height: 200px;
 }
 
 .captcha-text-box {
-  border: thick black;
+
   background-color: white;
-  width: 50;
+  width: 75%;
   margin: auto;
   height: 35%;
 }
@@ -22,6 +24,7 @@
 .captcha-text {
   color: black;
   text-align: center;
+  padding: 20px 10px;
   letter-spacing: 10px;
 }
 
