--- a/projects/hostile-ux/combative-captcha/style/captcha.css
+++ b/projects/hostile-ux/combative-captcha/style/captcha.css
@@ -6,15 +6,14 @@
   border-radius: 5%;
   background-color: lightgrey;
   border-style: solid;
-  border-width: .5px;
+  border-width: 0.5px;
   border-color: #808080;
-  width: 50%;
+  width: 300px;
   margin: 50px auto;
-  height: 200px;
+  height: 250px;
 }
 
 .captcha-text-box {
-
   background-color: white;
   width: 75%;
   margin: auto;
@@ -31,4 +30,23 @@
 .captcha-submit-form {
   margin: auto;
   text-align: center;
+}
+
+.loader-wheel {
+  border: 5px solid lightgrey;
+  border-radius: 50%;
+  border-top: 5px solid #606060;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
