--- a/projects/hostile-ux/combative-captcha/style/captcha.css
+++ b/projects/hostile-ux/combative-captcha/style/captcha.css
@@ -39,7 +39,7 @@
   margin: auto;
   width: 40px;
   height: 40px;
-  animation: spin 0.8s linear infinite;
+  animation: spin 0.8s cubic-bezier(0.5, 0, 0.5, 1) infinite;
 }
 
 @keyframes spin {
